Do not display an empty custom field area on client form, always show the scrollbar and sidebar height fixed

--- a/assets/default/sass/style.scss
+++ b/assets/default/sass/style.scss
@@ -36,9 +36,10 @@ $color_status_canceled:         #333333;
 |   =========================================================
 */
 
-html, body {
+html {
     height: 100%;
     -webkit-font-smoothing: subpixel-antialiased;
+    overflow-y: scroll;
 }
 
 body {
